--- a/microservice-consumer-movie/pom.xml
+++ b/microservice-consumer-movie/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>lombok</artifactId>
             <version>1.16.18</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
