--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     platform: h2
     schema: classpath:schema.sql
     data: classpath:data.sql
+    # 指定应用名称
+  application:
+    name: microservice-provider-user
 logging:
   level:
     root: INFO
@@ -17,3 +20,10 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
     com.itmuch: DEBUG
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:password123@localhost:8761/eureka/
+  #显示IP地址
+  instance:
+    prefer-ip-address: true
