--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -24,6 +24,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://user:password123@localhost:8761/eureka/
+    healthcheck:
+      enabled: true
+
   #显示IP地址
   instance:
     prefer-ip-address: true
