--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>microservice-consumer-movie</module>
         <module>microservice-consumer-movie-ribbon</module>
         <module>microservice-provider-user</module>
+        <module>microservice-consumer-movie-ribbon-properties-customizing</module>
+        <module>microservice-consumer-movie-feigin</module>
         <module>microservice-discovery-eureka</module>
     </modules>
 
