--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,12 @@
         <module>microservice-consumer-movie</module>
         <module>microservice-consumer-movie-ribbon</module>
         <module>microservice-provider-user</module>
+        <module>microservice-consumer-movie-ribbon-with-hystrix</module>
         <module>microservice-consumer-movie-ribbon-properties-customizing</module>
         <module>microservice-consumer-movie-feigin</module>
+        <module>microservice-consumer-movie-feigin-custom</module>
         <module>microservice-discovery-eureka</module>
+        <module>microservice-discovery-eureka-ha</module>
     </modules>
 
     <properties>
